#1 Doing the managers and the userController

--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,8 @@
     <body>
         <?php
             require 'partials/_header.phtml';
+            require $template;
+            require 'partials/_footer.phtml';
         ?>
     </body>
 </html>
