--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="assets/styles/scss/style.css" rel="stylesheet">
-        <title>GETHA</title>
+        <!-- <link href="assets/styles/scss/style.css" rel="stylesheet"> -->
+        <title>Farming Companion</title>
     </head>
     <body>
         <?php
