--- a/templates/villagers/index.phtml
+++ b/templates/villagers/index.phtml
@@ -10,7 +10,10 @@
         {
     ?>
 
-    <li><a href="index.php?route=villager_id=<?= $villager['id'] ;?>"><?= $villager['name'] ;?></a></li>
+    <li>
+        <img src="<?= $villager->getPicture() ;?>" alt="Picture of <?= $villager['name'] ;?>">
+        <a href="index.php?route=villager_id=<?= $villager['id'] ;?>"><?= $villager['name'] ;?></a>
+    </li>
 
     <?php        
         }
