--- a/templates/staticpages/homepage.phtml
+++ b/templates/staticpages/homepage.phtml
@@ -11,7 +11,7 @@
 
     <h3>Add your file</h3>
     <form enctype="multipart/form-data" method="POST" action="index.php?route=homepage">
-        <label for="saved-file">Upload your file</label>
+        <label class="hidden" for="saved-file">Upload your file</label> <!-- Hide it in css -->
         <input type="hidden" name="MAX_FILE_SIZE" value="7000000">
         <input type="file" name="saved-file" id="saved-file" value="Choose a file">
         <input type="submit" name="upload-file" id="upload-file" value="Submit">
