--- a/templates/admin/partials/_header.phtml
+++ b/templates/admin/partials/_header.phtml
@@ -1,3 +1,18 @@
 <header>
     <h1>Admin Dashboard</h1>
+    <nav>
+        <ul>
+            <li><a href="index.php?route=homepage">Back to the farming</a></li>
+        </ul>
+    </nav>
+    <?php
+        if(isset($_SESSION['admin']))
+        {
+    ?>
+    <form method="POST" action="index.php?route=logout">
+        <input type="submit" name="logout" id="logout" value="logout">
+    </form>
+    <?php
+        }
+    ?>
 </header>
