Adding the possibility to add a picture to the database in the back-office

--- a/templates/admin/dashboard/dashboard.phtml
+++ b/templates/admin/dashboard/dashboard.phtml
@@ -1,1 +1,6 @@
 <h2>Hello</h2>
+<h3>Add a picture to the database</h3>
+<?php
+    require 'templates/admin/data/picture.phtml';
+    // var_dump($_FILES);
+?>
