Trying to add the villagers, and done the input to add the pictures of the villagers

--- a/templates/admin/dashboard/dashboard.phtml
+++ b/templates/admin/dashboard/dashboard.phtml
@@ -1,6 +1,7 @@
 <h2>Hello</h2>
-<h3>Add a picture to the database</h3>
+
 <?php
     require 'templates/admin/data/picture.phtml';
+    require 'templates/admin/data/item.phtml';
     // var_dump($_FILES);
 ?>
