--- a/templates/admin/data/picture.phtml
+++ b/templates/admin/data/picture.phtml
@@ -1,6 +1,10 @@
-<form enctype="multipart/form-data" method="POST" action="index.php?route=admin">
-    <label class="hidden" for="add-picture">Upload your picture</label>
-    <input type="hidden" name="MAX_FILE_SIZE" value="7000000">
-    <input type="file" name="add-picture" id="add-picture" value="Choose a file" accept="image/*" multiple>
-    <input type="submit" name="upload-picture" id="upload-picture" value="Submit">
-</form>
+<section>
+    <h3>Add a picture of a villager to the database</h3>
+
+    <form enctype="multipart/form-data" method="POST" action="index.php?route=admin">
+        <label class="hidden" for="add-picture">Upload your picture</label>
+        <input type="hidden" name="MAX_FILE_SIZE" value="7000000">
+        <input type="file" name="add-picture" id="add-picture" value="Choose a file" accept="image/*">
+        <input type="submit" name="upload-picture" id="upload-picture" value="Submit">
+    </form>
+</section>
