--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -94,27 +94,38 @@
             </tr>
         </table>
     </section>
-    <section>
-        <h3>Schedule</h3>
-        <p>
-            <?php
-                foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
-                {
-                    echo $key;
-                    foreach($schedules as $keys => $schedule)
-                    {
-                        echo $keys;
-                        foreach($schedule as $keyz => $planning)
-                        {
-                            // echo $keyz;
-                            foreach($planning as $key => $plan)
-                            {
-                                echo $key. ' ' .$plan;
-                            }
-                        }
-                    }
-                }
-            ?>
-        </p>
-    </section>
+    <?php
+        if($villager->getName() === "Caroline" ||
+            $villager->getName() === "Clint" ||
+            $villager->getName() === "Evelyn" ||
+            $villager->getName() === "George" ||
+            $villager->getName() === "Gus" ||
+            $villager->getName() === "Jas" ||
+            $villager->getName() === "Kent" ||
+            $villager->getName() === "Linus" ||
+            $villager->getName() === "Marnie" ||
+            $villager->getName() === "Pam" ||
+            $villager->getName() === "Pierre" ||
+            $villager->getName() === "Robin" ||
+            $villager->getName() === "Sandy" ||
+            $villager->getName() === "Vincent" ||
+            $villager->getName() === "Willy")
+        {
+            require 'partials/_planning2.phtml';
+        }
+        else if($villager->getName() === "Dwarf" ||
+                $villager->getName() === "Krobus" ||
+                $villager->getName() === "Wizard")
+        {
+            require 'partials/_planning1.phtml';
+        }
+        else if($villager->getName() === "Emily")
+        {
+            require 'partials/_emily.phtml';
+        }
+        else
+        {
+            require 'partials/_planning3.phtml';
+        }
+    ?>
 </main>
