--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,6 +1,5 @@
-<h2><?= $game->getName() ;?></h2>
+<h2><?= $xml->player->name ;?></h2>
 
 <section>
-    <p><?= $game['url'] ;?>
-    <!-- Display all the informations of a villager -->
+    <!-- Display all the informations of the player progress -->
 </section>
