Continuing the progress of the player

--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,4 +1,4 @@
-<h2><?= $xml->player->name ;?></h2>
+<h2>Put the name of the farm here</h2>
 
 <section>
     <!-- Display all the informations of the player progress -->
