Updating the FileManager so it only is added once to the database

--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -11,6 +11,7 @@
             if(isset($_SESSION['user']))
             {
                 echo "<li><a href='index.php?route=my-account'>My account</a></li>";
+                echo "<li><a href='index.php?route=my-games'>My games</a></li>";
             }
             else if(isset($_SESSION['admin']))
             {
