--- a/templates/users/user/games.phtml
+++ b/templates/users/user/games.phtml
@@ -6,7 +6,7 @@
 ?>
 
 <li>
-    <a href="index.php?route=file_slug=<?= $game['id'] ;?>"><?= $game['name'] ;?></a>
+    <a href="index.php?route=file_slug=<?= $game['id'] ;?>"><?= htmlspecialchars($game['name']) ;?></a>
 </li>
 
 <?php
