Done adding everything in the database, now trying to display the informations on the front

--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,5 +1,14 @@
 <h2>Put the name of the farm here</h2>
 
+<?php
+    foreach($data as $player)
+    {
+        // var_dump($player);
+?>
 <section>
-    <!-- Display all the informations of the player progress -->
+    <h2></h2>
 </section>
+
+<?php
+    }
+?>
