--- a/templates/admin/partials/_header.phtml
+++ b/templates/admin/partials/_header.phtml
@@ -2,14 +2,14 @@
     <h1>Admin Dashboard</h1>
     <nav>
         <ul>
-            <li><a href="index.php?route=homepage">Back to the farming</a></li>
+            <li><a href="/res04-projet-soutenance/">Back to the farming</a></li>
         </ul>
     </nav>
     <?php
         if(isset($_SESSION['admin']))
         {
     ?>
-    <form method="POST" action="index.php?route=logout">
+    <form method="POST" action="/res04-projet-soutenance/logout">
         <input type="submit" name="logout" id="logout" value="logout">
     </form>
     <?php
