--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -2,20 +2,20 @@
     <h1>Farming Companion</h1>
     <nav>
         <ul>
-            <li><a href="index.php?route=homepage">Homepage</a></li>
-            <li><a href="index.php?route=villagers">Villagers</a></li>
-            <li><a href="index.php?route=register">Register</a></li>
-            <li><a href="index.php?route=login">Login</a></li>
+            <li><a href="/res04-projet-soutenance/">Homepage</a></li>
+            <li><a href="/res04-projet-soutenance/villagers">Villagers</a></li>
+            <li><a href="/res04-projet-soutenance/register">Register</a></li>
+            <li><a href="/res04-projet-soutenance/login">Login</a></li>
             <?php
             // var_dump($_SESSION['user']);
             if(isset($_SESSION['user']))
             {
-                echo "<li><a href='index.php?route=my-account'>My account</a></li>";
-                echo "<li><a href='index.php?route=my-games'>My games</a></li>";
+                echo "<li><a href='/res04-projet-soutenance/my-account'>My account</a></li>";
+                echo "<li><a href='/res04-projet-soutenance/my-games'>My games</a></li>";
             }
             else if(isset($_SESSION['admin']))
             {
-                echo "<li><a href='index.php?route=admin'>Admin Dashboard</a></li>";
+                echo "<li><a href='/res04-projet-soutenance/admin'>Admin Dashboard</a></li>";
             }
             ?>
             
@@ -25,7 +25,7 @@
         if(isset($_SESSION['user']) || isset($_SESSION['admin']))
         {
     ?>
-    <form method="POST" action="index.php?route=logout">
+    <form method="POST" action="/res04-projet-soutenance/logout">
         <input type="submit" name="logout" id="logout" value="logout">
     </form>
     <?php
