--- a/templates/users/user/create.phtml
+++ b/templates/users/user/create.phtml
@@ -1,4 +1,4 @@
-<form method="POST" action="index.php?route=register">
+<form method="POST" action="/res04-projet-soutenance/register">
     <fieldset>
         <label for="username">Username</label>
         <input type="text" name="username" id="username">
