Trying to make the method ReadSavedFile work

--- a/templates/admin/data/picture.phtml
+++ b/templates/admin/data/picture.phtml
@@ -1,7 +1,7 @@
 <section>
     <h3>Add a picture to the database</h3>
 
-    <form enctype="multipart/form-data" method="POST" action="index.php?route=admin">
+    <form enctype="multipart/form-data" method="POST" action="/res04-projet-soutenance/admin">
         <label class="hidden" for="add-picture">Upload your picture</label>
         <input type="hidden" name="MAX_FILE_SIZE" value="7000000">
         <input type="file" name="add-picture[]" id="add-picture" value="Choose a file" accept="image/*" multiple>
