--- a/templates/admin/partials/_header.phtml
+++ b/templates/admin/partials/_header.phtml
@@ -3,6 +3,9 @@
     <nav>
         <ul>
             <li><a href="/res04-projet-soutenance/">Back to the farming</a></li>
+            <li><a href="/res04-projet-soutenance/admin">Home of the Admin</a></li>
+            <li><a href="/res04-projet-soutenance/admin/all-users">All users</a></li>
+            <li><a href="/res04-projet-soutenance/admin/all-saved-games">All saved games</a></li>
         </ul>
     </nav>
     <?php
