Attempted to display the information of the saved file

--- a/templates/admin/partials/_header.phtml
+++ b/templates/admin/partials/_header.phtml
@@ -6,6 +6,7 @@
             <li><a href="/res04-projet-soutenance/admin">Home of the Admin</a></li>
             <li><a href="/res04-projet-soutenance/admin/all-users">All users</a></li>
             <li><a href="/res04-projet-soutenance/admin/all-saved-games">All saved games</a></li>
+            <li><a href="/res04-projet-soutenance/admin/statistics">Statistics</a></li>
         </ul>
     </nav>
     <?php
