--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,16 +1,20 @@
+<h2>Your farm</h2>
+
 <?php
     foreach($data as $key => $player)
     {
         // var_dump($key);
-        if($key === "player")
-        {
 ?>
-<h2><?=$player->getPlayerName();?>'s Farm</h2>
 
 <section>
+    <?php
+        if($key === "player")
+        {
+    ?>
     <h3><?=$player->getPlayerName();?></h3>
     <p>You have a 
         <?php
+        
             if($player->getCat() === true)
             {
                 echo "cat named ". $player->getPetName();
@@ -44,22 +48,120 @@
 </section>
 
 <section>
-    <h3>Your skills</h3>
-    <ul>
     <?php
         if($key === "skills")
         {
+    ?>
+    <h3>Your skills</h3>
+    <ul>
+        <?php
             foreach($player as $skill)
             {
-    ?>
-        <li><?=$skill->getName();?>:  <?=$skill->getLevel();?>/10</li>
-    <?php
+        ?>
+            <li><?=$skill->getName();?>:  <?=$skill->getLevel();?>/10</li>
+        <?php
             }
         }
-    ?>
+        ?>
     </ul>
 </section>
 
+<section>
+    <?php
+        if($key === "bundles")
+        {
+    ?>
+    <h3>Bundles of the Community Center</h3>
+    <ul>
+        <?php
+            foreach($player as $bundle)
+            {
+        ?>
+        <li><?=$bundle->getBundleName();?>: 
+            <?php 
+                if($bundle->getComplete() === true)
+                {
+                    echo "Completed";
+                }
+                else
+                {
+                    echo "Not completed";
+                }
+            ?>
+        </li>
+        <?php
+            }
+        }
+        ?>
+    </ul>
+</section>
+
+<section>
+    <?php
+        if($key === "items")
+        {
+    ?>
+    <h3>Artifacts</h3>
+    <h4>Donated to the museum</h4> 
+    <ul>
+        <?php
+            foreach($player as $museum)
+            {
+                if($museum->getHas() ===  true)
+                {
+                    echo "<li>".$museum->getName()."</li>";
+                }
+            }
+        ?>
+    </ul>
+    <h4>Not found yet</h4>
+    <ul>
+        <?php
+            foreach($player as $museum)
+            {
+                if($museum->getHas() ===  false)
+                {
+                    echo "<li>".$museum->getName()."</li>";
+                }
+            }
+        }
+        ?>
+    </ul>
+</section>
+
+<section>
+    <?php
+        if($key === "books")
+        {
+    ?>
+    <h3>Lost books</h3>
+    <p>You have found <?=$player->getAmount();?> out of 21 books.</p>
+    <?php
+        }
+    ?>
+</section>
+
+<section>
+    <?php
+        if($key === "relationships")
+        {
+    ?>
+    <h3>Relationships</h3>
+    <dl>
+        <?php
+            foreach($player as $relationship)
+            {
+                echo 
+                "<dt>".$relationship->getVillager()->getName()."</dt>
+                 <dd>".intval($relationship->getLevel() / 250). "hearts</dd>";
+            }
+        ?>
+    </dl>
+    <?php
+        }
+    ?>
+</section>
+        
 <?php
     }
 ?>
