--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -153,10 +153,71 @@
             {
                 echo 
                 "<dt>".$relationship->getVillager()->getName()."</dt>
-                 <dd>".intval($relationship->getLevel() / 250). "hearts</dd>";
+                 <dd>".intval($relationship->getLevel() / 250). " hearts out of 10.</dd>";
             }
         ?>
     </dl>
+    <?php
+        }
+    ?>
+</section>
+
+<section>
+    <?php
+        if($key === "locations")
+        {
+    ?>
+    <h3>Locations discovered</h3>
+    <dl>
+        <?php
+            foreach($player as $locations)
+            {
+                if($locations->getIsDiscovered() ===  true)
+                {
+                    echo "<dt>".$locations->getName()."</dt>
+                    <dd> has been discovered.</dd>";
+                }
+                else
+                {
+                    echo "<dt>".$locations->getName()."</dt>
+                    <dd> has not been discovered yet.</dd>";
+                }
+            }
+        ?>
+    </dl>
+    <?php
+        }
+    ?>
+</section>
+    
+<section>
+    <?php
+        if($key === "possessedItems")
+        {
+    ?>
+    <h3>Equipment</h3>
+    <p>You possess :</p>
+    <ul>
+        <?php
+            foreach($player as $items)
+            {
+                echo "<li>".$items->getName()."</li>";
+            }
+        }
+        ?>
+    </ul>
+</section>
+
+<section>
+    <?php
+        if($key === "stats")
+        {
+    ?>
+    <h3>General statistics</h3>
+    <p>You have played <?=$player->getHoursPlayed();?> hours.</p>
+    <p>You have spent <?=$player->getDaysSpent();?> days in game.</p>
+    <p><?=$player->getSeasonsPassed();?> seasons have passed.</p>
+    <p>You have successfully caught <?=$player->getFishCatched();?> fishes.</p>
     <?php
         }
     ?>
