Added the staticpages templates and done the StaticPageController

--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -9,7 +9,13 @@
     <body>
         <?php
             require 'partials/_header.phtml';
+        ?>
+        <main>
+        <?php
             require $template;
+        ?>
+        </main>
+        <?php
             require 'partials/_footer.phtml';
         ?>
     </body>
