--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -10,8 +10,8 @@
             // var_dump($_SESSION['user']);
             if(isset($_SESSION['user']))
             {
-                echo "<li><a href='/res04-projet-soutenance/my-account'>My account</a></li>";
-                echo "<li><a href='/res04-projet-soutenance/my-games'>My games</a></li>";
+                echo "<li><a href='/res04-projet-soutenance/my-account'>My account</a></li>
+                      <li><a href='/res04-projet-soutenance/my-games'>My games</a></li>";
             }
             else if(isset($_SESSION['admin']))
             {
