--- a/templates/users/staticpages/homepage.phtml
+++ b/templates/users/staticpages/homepage.phtml
@@ -1,15 +1,17 @@
 <section>
-    <h2>Tutorial</h2>
-
-    
+    <h2>Presentation</h2>
+    <p>
+        Hello to you, dear fellow Stardew Valley worshipper ! I welcome you to the wonderful website. I made it as a fan of Stardew Valley. When playing, i always struggled to know where i was in the game (especially after a long period of time not playing).
+    </p>
+    <p>
+        The purpose of this website is to upload your save file (tutorial just below), and it will display your progress in the game. This is the first version of the website, i know there is room for improvement, so please be indulgent with me.
+    </p>
 </section>
+
 <section>
-    <?php
-        // if(isset($_SESSION['user']))
-        // {
-    ?>
-
-    <?php
-        // }
-    ?>
-</section>
+    <h2>Where to find your file</h2>
+    <article>
+        <h3>Windows</h3>
+        <p></p>
+    </article>
+</section>  
