Adding data to the homepage

--- a/templates/users/staticpages/homepage.phtml
+++ b/templates/users/staticpages/homepage.phtml
@@ -10,8 +10,25 @@
 
 <section>
     <h2>Where to find your file</h2>
+    <p>
+        First, you need to create an account to be able to upload your file. When logged in, go to <a href="/res04-projet-soutenance/my-games">my games</a> to find the uploader and follow the instructions below, depending on which plateform you play.
+    </p>
+
     <article>
         <h3>Windows</h3>
-        <p></p>
+        <p>Press <code>Windows + R</code> and paste exactly what's following :</p>
+        <ul>
+            <li>
+                For Steam or GOG : <code>%appdata%\StardewValley\Saves</code>
+            </li>
+            <li>
+                For Xbox App : <code>%localappdata%\Packages\ConcernedApe.StardewValleyPC_0c8vynj4cqe4e\LocalCache\Roaming\StardewValley\Saves</code>
+            </li>
+        </ul>
+        <p>Click Ok to open the folder. The file is named <code>NameOfYourFarm_123456789</code>. This is the one you want to upload.</p>
+    </article>
+
+    <article>
+        <h3>Linux</h3>
     </article>
 </section>  
