--- a/templates/admin/users/statistics.phtml
+++ b/templates/admin/users/statistics.phtml
@@ -1,5 +1,43 @@
 <h2>Statistics</h2>
 <?php
-    $stats = $data;
-    var_dump($stats);
+    // var_dump($data['total']);
 ?>
+<section>
+    <table>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Hours played</th>
+                <th>Days Spent in game</th>
+                <th>Seasons passed</th>
+                <th>Fish caught</th>
+            </tr>
+        </thead>
+        <tbody>
+            <?php
+                foreach($data['stats'] as $stat)
+                {
+                    echo 
+                        "<tr>
+                            <td></td>
+                            <td>".$stat->getHoursPlayed()."</td>
+                            <td>".$stat->getDaysSpent()."</td>
+                            <td>".$stat->getSeasonsPassed()."</td>
+                            <td>".$stat->getFishCatched()."</td>
+                        </tr>";
+                }   
+            ?>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Average</td>
+                <?php
+                    foreach($data['total'] as $total)
+                    {
+                        echo "<td>".$total."</td>";
+                    }   
+                ?>
+            </tr>
+        </tfoot>
+    </table>
+</section>
