Done the form validator for the registerform and done a dropdown for the events of a villager

--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -18,5 +18,7 @@
         <?php
             require 'partials/_footer.phtml';
         ?>
+
+        <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script>
     </body>
 </html>
