--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -22,8 +22,8 @@
         </p>
     </section>
     <section>
-        <h3>Events</h3>
-        <table>
+        <h3 id="villager-events">Events</h3>
+        <table id="events">
             <?php
                 // var_dump($villager->getEvents());
                 foreach($villager->getEvents() as $key => $event)
