Changed the game.phtml by doing some requires in it and done some JS for the collapseData

--- a/templates/users/user/game.phtml
+++ b/templates/users/user/game.phtml
@@ -1,252 +1,22 @@
 <h2>Your farm</h2>
 
 <?php
-    // var_dump($data['itemsPictures']);
     foreach($data as $key => $player)
     {
 ?>
 
 <section>
-    <?php
-        if($key === "player")
-        {
-    ?>
-    <h3><?=$player->getPlayerName();?></h3>
-    <p>You have a 
-        <?php
-        
-            if($player->getCat() === true)
-            {
-                echo "cat named ". $player->getPetName();
-            }
-            else
-            {
-                echo "dog named ". $player->getPetName();
-            }
-        ?>
-    </p>
-    <p>You currently have <?=$player->getMoney();?> gold.</p>
-    <p>Your maximum health : <?=$player->getHealth();?></p>
-    <p>Your maximum energy : <?=$player->getEnergy();?></p>
-    <p>You are
-        <?php
-            if($player->getIsMarried() === true)
-            {
-                echo "married ";
-                if($player->getHasChildren() === true)
-                {
-                    echo "and you have children";
-                }
-            }
-            else
-            {
-                echo "not married and you don't have children";
-            }
-        }
-        ?>
-    </p>
-</section>
-
-<section>
-    <?php
-        if($key === "skills")
-        {
-    ?>
-    <h3>Your skills</h3>
-    <ul>
-        <?php
-            foreach($player as $skill)
-            {
-        ?>
-            <li><?=$skill->getName();?>:  <?=$skill->getLevel();?>/10</li>
-        <?php
-            }
-        }
-        ?>
-    </ul>
-</section>
-
-<section>
-    <?php
-        if($key === "bundles")
-        {
-    ?>
-    <h3>Bundles of the Community Center</h3>
-    <ul>
-        <?php
-            foreach($player as $bundle)
-            {
-        ?>
-        <li><?=$bundle->getBundleName();?>: 
-            <?php 
-                if($bundle->getComplete() === true)
-                {
-                    echo " Completed";
-                }
-                else
-                {
-                    echo " Not completed";
-                }
-            ?>
-        </li>
-        <?php
-            }
-        }
-        ?>
-    </ul>
-</section>
-
-<section>
-    <?php
-        if($key === "items")
-        {
-    ?>
-    <h3>Artifacts</h3>
-    <h4>Donated to the museum</h4> 
-    <ul>
-        <?php
-            foreach($player as $museum)
-            {
-                if($museum->getHas() ===  true)
-                {
-        ?>
-                    <?php
-                    foreach($data['itemsPictures'] as $item)
-                    {
-                        if($item->getName() === $museum->getName())
-                        {
-                    ?>
-                    <li>
-                        <img src="/res04-projet-soutenance/<?=$item->getPicture()->getUrl();?>" alt="<?=$item->getPicture()->getAlt();?>">
-                        <p><?=$museum->getName();?></p>
-                    </li>
-                        <?php
-                        }
-                    }
-                }
-            }
-        ?>
-    </ul>
-    <h4>Not found yet</h4>
-    <ul>
-        <?php
-            foreach($player as $museum)
-            {
-                if($museum->getHas() ===  false)
-                {
-                    ?>
-                    <?php
-                    foreach($data['itemsPictures'] as $item)
-                    {
-                        if($item->getName() === $museum->getName())
-                        {
-                    ?>
-                    <li>
-                        <img src="/res04-projet-soutenance/<?=$item->getPicture()->getUrl();?>" alt="<?=$item->getPicture()->getAlt();?>">
-                        <p><?=$museum->getName();?></p>
-                    </li>
-                        <?php
-                        }
-                    }
-                }
-            }
-        }
-        ?>
-    </ul>
-</section>
-
-<section>
-    <?php
-        if($key === "books")
-        {
-    ?>
-    <h3>Lost books</h3>
-    <p>You have found <?=$player->getAmount();?> out of 21 books.</p>
-    <?php
-        }
-    ?>
-</section>
-
-<section>
-    <?php
-        if($key === "relationships")
-        {
-    ?>
-    <h3>Relationships</h3>
-    <dl>
-        <?php
-            foreach($player as $relationship)
-            {
-                echo 
-                "<dt>".$relationship->getVillager()->getName()."</dt>
-                 <dd>".intval($relationship->getLevel() / 250). " hearts out of 10.</dd>";
-            }
-        ?>
-    </dl>
-    <?php
-        }
-    ?>
-</section>
-
-<section>
-    <?php
-        if($key === "locations")
-        {
-    ?>
-    <h3>Locations discovered</h3>
-    <dl>
-        <?php
-            foreach($player as $locations)
-            {
-                if($locations->getIsDiscovered() ===  true)
-                {
-                    echo "<dt>".$locations->getName()."</dt>
-                    <dd> has been discovered.</dd>";
-                }
-                else
-                {
-                    echo "<dt>".$locations->getName()."</dt>
-                    <dd> has not been discovered yet.</dd>";
-                }
-            }
-        ?>
-    </dl>
-    <?php
-        }
-    ?>
-</section>
-    
-<section>
-    <?php
-        if($key === "possessedItems")
-        {
-    ?>
-    <h3>Equipment</h3>
-    <p>You possess :</p>
-    <ul>
-        <?php
-            foreach($player as $items)
-            {
-                echo "<li>".$items->getName()."</li>";
-            }
-        }
-        ?>
-    </ul>
-</section>
-
-<section>
-    <?php
-        if($key === "stats")
-        {
-    ?>
-    <h3>General statistics</h3>
-    <p>You have played <?=$player->getHoursPlayed();?> hours.</p>
-    <p>You have spent <?=$player->getDaysSpent();?> days in game.</p>
-    <p><?=$player->getSeasonsPassed();?> seasons have passed.</p>
-    <p>You have successfully caught <?=$player->getFishCatched();?> fishes.</p>
-    <?php
-        }
-    ?>
+    <?php 
+        require 'game_partials/_player.phtml'; 
+        require 'game_partials/_skills.phtml'; 
+        require 'game_partials/_bundles.phtml'; 
+        require 'game_partials/_museumItems.phtml'; 
+        require 'game_partials/_books.phtml';
+        require 'game_partials/_relationships.phtml';
+        require 'game_partials/_locations.phtml';
+        require 'game_partials/_possessedItems.phtml';
+        require 'game_partials/_stats.phtml'; 
+    ?>  
 </section>
         
 <?php
