--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -22,7 +22,7 @@
         </p>
     </section>
     <section>
-        <h3 id="villager-events">Events</h3>
+        <h3 id="villager-events"><button>Events</button></h3>
         <table id="events">
             <?php
                 // var_dump($villager->getEvents());
